--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -5,8 +5,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#0f172a">
+    <meta name="viewport" content="width=1024, initial-scale=1.0, maximum-scale=1.0">
+   <meta name="theme-color" content="#0f172a">
     <title>CShub - Home</title>
     <!-- Icons & Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
