--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -162,7 +162,7 @@
             deferredPrompt.prompt();
             const { outcome } = await deferredPrompt.userChoice;
             if (outcome === 'accepted') {
-                btnDesktop.classList.add('d-none');98=
+                btnDesktop.classList.add('d-none');
                     
                 btnMobile.classList.add('d-none');
             }
@@ -176,7 +176,7 @@
         if (window.matchMedia('(display-mode: standalone)').matches) {
             btnDesktop.classList.add('d-none');
             btnMobile.classList.add('d-none');
-        }qaaaa
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
